--- a/classNotes/6-vectors/slides-6-vectors.html
+++ b/classNotes/6-vectors/slides-6-vectors.html
@@ -19,7 +19,7 @@ class: center, middle, inverse, title-slide
 ---
 
 
-# Announcements 
+# Announcements
 
 ---
 # We've been dealing with vectors all along!
@@ -234,13 +234,23 @@ x - x
 ---
 # Summing numeric vectors
 
+
+```r
+x &lt;- 1:10
+x
+```
+
+```
+##  [1]  1  2  3  4  5  6  7  8  9 10
+```
+
 --
 Using a loop:
 
 ```r
 total &lt;- 0
-for (i in x) {
-    total &lt;- total + x[i]
+for (item in x) {
+    total &lt;- total + item
 }
 total
 ```
@@ -273,15 +283,16 @@ x
 ```
 ##  [1]  1  2  3  4  5  6  7  8  9 10
 ```
-
+--
 
 ```r
-prod(x) 
+prod(x)
 ```
 
 ```
 ## [1] 3628800
 ```
+--
 
 ```r
 mean(x)
@@ -290,6 +301,7 @@ mean(x)
 ```
 ## [1] 5.5
 ```
+--
 
 ```r
 median(x)
@@ -298,6 +310,7 @@ median(x)
 ```
 ## [1] 5.5
 ```
+--
 
 ```r
 max(x)
@@ -306,6 +319,7 @@ max(x)
 ```
 ## [1] 10
 ```
+--
 
 ```r
 min(x)
@@ -319,7 +333,6 @@ min(x)
 # Practice: What will this return?
 
 [60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
-
 
 
 ```r
@@ -403,6 +416,15 @@ x[c(2, 7)] # Returns the 2nd and 7th elements
 ```
 ## [1] 2 7
 ```
+--
+
+```r
+x[length(x)] # Returns the last element
+```
+
+```
+## [1] 10
+```
 
 ---
 # Use negative integers to _remove_ elements
@@ -434,53 +456,81 @@ x[-c(2, 7)] # Returns everything except the 2nd and 7th elements
 ```
 ## [1]  1  3  4  5  6  8  9 10
 ```
-
----
-# Characters indices
-
-You can name vector elements by
-
 --
-1. Using the `names()` function:
 
 ```r
-x &lt;- seq(1, 10)
-names(x) &lt;- c('one', 'two', 'three', 'four', 'five', 'six', 'seven', 'eight', 'nine', 'ten')
+x[-length(x)] # Returns everything except the last elements
+```
+
+```
+## [1] 1 2 3 4 5 6 7 8 9
+```
+
+---
+# You can give names to vector elements
+
+
+```r
+x &lt;- seq(5)
 x
 ```
 
 ```
-##   one   two three  four  five   six seven eight  nine   ten 
-##     1     2     3     4     5     6     7     8     9    10
+## [1] 1 2 3 4 5
 ```
 
 --
-2. Using the `c()` function:
+1) Use the `names()` function:
 
 ```r
-y &lt;- c('one' = 1, 'two' = 2, 'three' = 3)
+names(x) &lt;- c('one', 'two', 'three', 'four', 'five')
+x
+```
+
+```
+##   one   two three  four  five 
+##     1     2     3     4     5
+```
+
+--
+2) Use the `c()` function:
+
+```r
+y &lt;- c('one' = 1, 'two' = 2, 'three' = 3, 'four' = 4, 'five' = 5)
 y
 ```
 
 ```
-##   one   two three 
-##     1     2     3
+##   one   two three  four  five 
+##     1     2     3     4     5
 ```
 
---
-You can use names to slice vectors:
+---
+# You can use names to slice vectors
+
 
 ```r
-x['one'] 
+x
+```
+
+```
+##   one   two three  four  five 
+##     1     2     3     4     5
+```
+--
+
+```r
+x['one']
 ```
 
 ```
 ## one 
 ##   1
 ```
+--
 
 ```r
-y[c('two', 'three')] 
+x[c('two', 'three')]
 ```
 
 ```
@@ -488,63 +538,66 @@ y[c('two', 'three')]
 ##     2     3
 ```
 
+
 ---
 # Logical indices
 
 --
 
 ```r
-x &lt;- seq(10)
+x &lt;- seq(10, 1)
 x
 ```
 
 ```
-##  [1]  1  2  3  4  5  6  7  8  9 10
+##  [1] 10  9  8  7  6  5  4  3  2  1
 ```
 
 --
+Create a logical vector:
 
 ```r
-x &gt; 5 # Create logical vector
+x &gt; 5
 ```
 
 ```
-##  [1] FALSE FALSE FALSE FALSE FALSE  TRUE  TRUE  TRUE  TRUE  TRUE
+##  [1]  TRUE  TRUE  TRUE  TRUE  TRUE FALSE FALSE FALSE FALSE FALSE
 ```
 
 --
+Use logical vector in brackets to filter elements:
 
 ```r
-x[x &gt; 5] # Put logical vector in brackets to filter out the TRUE elements
+x[x &gt; 5]
 ```
 
 ```
-## [1]  6  7  8  9 10
+## [1] 10  9  8  7  6
 ```
 
 --
 Another way - use the `which()` function:
 
 ```r
-which(x &lt; 5) # Returns indices of TRUE elements
+which(x &gt; 5) # Returns indices of TRUE elements
 ```
 
 ```
-## [1] 1 2 3 4
+## [1] 1 2 3 4 5
 ```
 
 ```r
-x[which(x &lt; 5)] # Use which to select elements based on a condition
+x[which(x &gt; 5)] # Use which to select elements based on a condition
 ```
 
 ```
-## [1] 1 2 3 4
+## [1] 10  9  8  7  6
 ```
 
 ---
 # Practice: What will this return?
 
-[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+[2 minutes](https://www.youtube.com/watch?v=4xG2aJa6UyY) - no typing!
 
 
 ```r
@@ -554,10 +607,20 @@ f &lt;- function(x) {
     }
     return(x)
 }
-x &lt;- c(2, 1, 0)
-y &lt;- c(1, 4, 7)
+x &lt;- c(1, 2, 3)
+```
+
+```r
 f(x)
-f(y)
+```
+--
+
+```r
+f(x)
+```
+
+```
+## [1] 10 27 70
 ```
 
 ---
@@ -753,7 +816,7 @@ order(a)
 This does the same thing as `sort(a)`:
 
 ```r
-a[order(a)] 
+a[order(a)]
 ```
 
 ```
@@ -794,7 +857,7 @@ x %% 1
 ```
 
 ---
-# Group practice 
+# Group practice
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
@@ -812,7 +875,7 @@ Write a function that returns the vector in reverse order. So if `x` equals `c(2
 .pull-right[
 2) `dotProduct(a, b)`
 
-**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.  
+**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.
 
 With this in mind, write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. **No loops!** Here's some test cases:
 
@@ -824,7 +887,7 @@ With this in mind, write a function that takes two vectors and returns the dot p
 ]
 
 ---
-# Group practice 
+# Group practice
 
 [20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
 
