--- a/classNotes/6-vectors/slides-6-vectors.html
+++ b/classNotes/6-vectors/slides-6-vectors.html
@@ -22,6 +22,96 @@ class: center, middle, inverse, title-slide
 # Announcements
 
 ---
+# Iteration review
+
+```r
+x &lt;- seq(10)
+x
+```
+
+```
+##  [1]  1  2  3  4  5  6  7  8  9 10
+```
+Iterate over `x`:
+
+--
+.pull-left[
+### `for` loop
+
+```r
+for (i in 1:length(x)) {
+    cat(i, '\n')
+}
+```
+
+```
+## 1 
+## 2 
+## 3 
+## 4 
+## 5 
+## 6 
+## 7 
+## 8 
+## 9 
+## 10
+```
+]
+--
+.pull-right[
+### `while` loops
+i &lt;- 1
+while (i &lt;= length(x)) {
+    cat(i, '\n')
+    i &lt;- i + 1
+}
+]
+
+---
+# Search for something in a sequence
+
+```r
+x &lt;- seq(10)
+x
+```
+
+```
+##  [1]  1  2  3  4  5  6  7  8  9 10
+```
+Search for **even** numbers:
+
+--
+.pull-left[
+### `for` loop
+
+```r
+count &lt;- 0
+for (i in 1:length(x)) {
+    if (i %% 2 == 0) {
+        count &lt;- count + 1
+    }
+}
+count
+```
+
+```
+## [1] 5
+```
+]
+--
+.pull-right[
+### `while` loops
+count &lt;- 0
+i &lt;- 1
+while (i &lt;= length(x)) {
+    if (i %% 2 == 0) {
+        count &lt;- count + 1
+    }
+    i &lt;- i + 1
+}
+]
+
+---
 # We've been dealing with vectors all along!
 
 
@@ -291,30 +381,43 @@ min(x)
 ```
 
 ---
-# Practice: What will this return?
+# Practice: Think-Pair-Share
 
-[60 seconds](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
+[3 minutes](https://www.youtube.com/watch?v=CH50zuS8DD0) - no typing!
 
+### What will this return?
+
+.pull-left[
 
 ```r
-f &lt;- function(x) {
+f1 &lt;- function(x) {
     m = x
     l = x + 4
     m = m + 5
     return(c(m, l))
 }
-x &lt;- c(1, 2, 3)
-y &lt;- c(3, 4, 5)
 ```
+]
+.pull-right[
 
 ```r
-f(x)
-f(y)
+f2 &lt;- function(x) {
+    return(c(x, x / 2))
+}
+```
+]
+
+
+```r
+x &lt;- c(1, 2, 3)
+y &lt;- c(TRUE, FALSE, 7)
+f1(x)
+f2(y)
 ```
 --
 
 ```r
-f(x)
+f1(x)
 ```
 
 ```
@@ -322,15 +425,15 @@ f(x)
 ```
 
 ```r
-f(y)
+f2(y)
 ```
 
 ```
-## [1]  8  9 10  7  8  9
+## [1] 1.0 1.0 0.0 7.0 0.5 0.5 0.0 3.5
 ```
 
 ---
-# Using vectors instead of a loop - sum
+# Using vectors instead of a loop: Summation
 
 
 ```r
@@ -370,25 +473,30 @@ sum(x)
 ```
 
 ---
-# Using vectors instead of a loop 
+# Using vectors instead of a loop
 
 Example: Get the remainder for each value in a vector:
-&lt;br&gt;
 
+
+```r
+x &lt;- c(3.1415, 1.618, 2.718)
+x
+```
+
+```
+## [1] 3.1415 1.6180 2.7180
+```
 --
 Using a loop:
 
 ```r
-x &lt;- c(3.1415, 1.618, 2.718)
 for (i in 1:length(x)) {
     remainder &lt;- x[i] %% 1
-    print(remainder)
 }
+remainder
 ```
 
 ```
-## [1] 0.1415
-## [1] 0.618
 ## [1] 0.718
 ```
 
@@ -396,7 +504,8 @@ for (i in 1:length(x)) {
 Using a vector:
 
 ```r
-x %% 1
+remainder &lt;- x %% 1
+remainder
 ```
 
 ```
@@ -404,7 +513,7 @@ x %% 1
 ```
 
 ---
-# Vector slicing with brackets `[]` and indices
+# Get elements in a vector: Use brackets `[]`
 
 
 ```r
@@ -502,7 +611,7 @@ x[-length(x)] # Returns everything except the last elements
 ```
 
 ---
-# You can give names to vector elements
+# You can name vector elements
 
 
 ```r
@@ -541,7 +650,7 @@ y
 ```
 
 ---
-# You can use names to slice vectors
+# You can use names to extract elements in a vector
 
 
 ```r
@@ -629,9 +738,11 @@ x[which(x &gt; 5)] # Use which to select elements based on a condition
 ```
 
 ---
-# Practice: What will this return?
+# Practice: Think-Pair-Share
 
 [4 minutes](https://www.youtube.com/watch?v=zVHWhLme2NQ) - no typing!
+
+### What will this return?
 
 
 ```r
@@ -666,15 +777,18 @@ Check if 2 vectors are the same:
 ```r
 x &lt;- c(1, 2, 3)
 y &lt;- c(1, 2, 3)
+```
+
+```r
 x == y
 ```
+--
 
 ```
 ## [1] TRUE TRUE TRUE
 ```
-
 --
-To check if the _whole_ vectors are the same, use `all()`:
+To check if _all_ elements are the same, use `all()`:
 
 ```r
 all(x == y)
@@ -685,7 +799,7 @@ all(x == y)
 ```
 
 --
-To check if any elements are the same, use `any()`:
+To check if _any_ elements are the same, use `any()`:
 
 ```r
 a &lt;- c(1, 2, 3)
@@ -721,7 +835,7 @@ any(a == b)
 ```r
 x &lt;- c('a' = 1, 'b' = 2, 'c' = 3)
 y &lt;- c('one' = 1, 'two' = 2, 'three' = 3)
-x 
+x
 ```
 
 ```
@@ -730,7 +844,7 @@ x
 ```
 
 ```r
-y 
+y
 ```
 
 ```
@@ -757,10 +871,11 @@ identical(x, y) # Also compares the **names** of the elements
 ```
 
 ---
-# Practice
+# Practice: Think-Pair-Share
+
+[10 minutes](https://www.youtube.com/watch?v=4ASKMcdCc3g)
 
 .pull-left[
-[10 minutes](https://www.youtube.com/watch?v=4ASKMcdCc3g)
 
 Re-write `isPrime(n)` from last week, but **without loops!**
 
@@ -788,6 +903,11 @@ isPrime &lt;- function(n) {
 }
 ```
 ]
+
+---
+# 5 minute break - stand up, move around, stretch!
+
+### [5 minutes](https://www.youtube.com/watch?v=_W0bSen8Qjg)
 
 ---
 # Vectorized operations
@@ -952,37 +1072,6 @@ Write a function that returns the vector in reverse order. So if `x` equals `c(2
 ]
 
 .pull-right[
-2) `dotProduct(a, b)`
-
-**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.
-
-With this in mind, write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. **No loops!** Here's some test cases:
-
-- `dotProduct(c(1,2,3), c(4,5,6)) == 32`
-- `dotProduct(c(1,2), c(4,5,6)) == 14`
-- `dotProduct(c(2,3,4), c(-7,1,9)) == 25`
-- `dotProduct(c(0,0,0), c(-7,1,9)) == 0`
-
-]
-
----
-# Group practice
-
-[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
-
-.pull-left[
-1) `alternatingSum(a)`
-
-Write a function that takes a vector of numbers `a` and returns the alternating sum, where the sign alternates from positive to negative or vice versa. **No loops!** Here's some test cases:
-
-- `alternatingSum(c(5,3,8,4)) == (5 - 3 + 8 - 4)`
-- `alternatingSum(c(1,2,3)) == (1 - 2 + 3)`
-- `alternatingSum(c(0,0,0)) == 0`
-- `alternatingSum(c(-7,5,3)) == (-7 - 5 + 3)`
-
-]
-
-.pull-right[
 2) `median(a)`
 
 Write a function that takes a vector of numbers `a` and returns the median value in the vector, which is the value of the middle element (or the average of the two middle elements). **No loops!** Here's some test cases:
@@ -993,6 +1082,35 @@ Write a function that takes a vector of numbers `a` and returns the median value
 - `median(c(4,5,6,7,8)) == 6`
 - `median(c(4,5,6,7)) == mean(c(5,6))`
 
+]
+
+---
+# Group practice
+
+[20 minutes](https://www.youtube.com/watch?v=kxGWsHYITAw) - In groups of 4, write the following functions:
+
+.pull-left[
+2) `dotProduct(a, b)`
+
+**Background**: the "dot product" of two vectors is the sum of the products of the corresponding terms. So the dot product of the vectors `c(1,2,3)` and `c(4,5,6)` is `(1*4) + (2*5) + (3*6)`, or `4 + 10 + 18 = 32`.
+
+With this in mind, write a function that takes two vectors and returns the dot product of those vectors. If the vectors are not equal length, ignore the extra elements in the longer vector. **No loops!** Here's some test cases:
+
+- `dotProduct(c(1,2,3), c(4,5,6)) == 32`
+- `dotProduct(c(1,2), c(4,5,6)) == 14`
+- `dotProduct(c(2,3,4), c(-7,1,9)) == 25`
+- `dotProduct(c(0,0,0), c(-7,1,9)) == 0`
+]
+
+.pull-right[
+1) `alternatingSum(a)`
+
+Write a function that takes a vector of numbers `a` and returns the alternating sum, where the sign alternates from positive to negative or vice versa. **No loops!** Here's some test cases:
+
+- `alternatingSum(c(5,3,8,4)) == (5 - 3 + 8 - 4)`
+- `alternatingSum(c(1,2,3)) == (1 - 2 + 3)`
+- `alternatingSum(c(0,0,0)) == 0`
+- `alternatingSum(c(-7,5,3)) == (-7 - 5 + 3)`
 ]
     </textarea>
 <style data-target="print-only">@media screen {.remark-slide-container{display:block;}.remark-slide-scaler{box-shadow:none;}}</style>
